# Control-VAE

./: .gitattributes  .gitignore  LICENSE  README.md  VclSimuBackend-raw.py  build_motion_dataset.py  index.html  odecharacter_scene.pickle  requirements.yml  setup.py  train_controlvae.py
ControlVAECore/Env/: vclode_track_env.py
ControlVAECore/Model/: controlvae.py  modules.py  trajectory_collection.py  world_model.py
ControlVAECore/Utils/: diff_quat.py  index_counter.py  misc.py  motion_dataset.py  motion_utils.py  mpi_utils.py  pytorch_utils.py  radam.py  replay_buffer.py
Data/: ControlVAE.yml
Data/Misc/: untitled.blend  world.json
Data/Pretrained/: config.yml
ModifyODESrc/: .gitignore  CMakeLists.txt  DrawStuffWorld.pxd  EigenWrapper.pxd  ModifyODE.pxd  MotionUtils.pxd  VclSimuBackend.pyx  clear.cmd  clear.sh  readme.md  setup.py
ModifyODESrc/OPCODE/: OPC_OptimizedTree.h  Opcode.h
ModifyODESrc/OPCODE/Ice/: IceFPU.h  IceTypes.h
ModifyODESrc/Utils/: EigenWrapper.cpp  MixQuaternion.cpp  MixQuaternion.h  PDControlAdd.cpp  PDControlAdd.h  QuaternionWithGrad.cpp  QuaternionWithGrad.h  inertia.cpp  inertia.h  joint_local_quat_batch.cpp  joint_local_quat_batch.h
ModifyODESrc/drawstuff/: Makefile.am  Makefile.in
ModifyODESrc/drawstuff/Visualizer/: .gitignore  CMakeLists.txt  drawByWorld.cpp
ModifyODESrc/drawstuff/dstest/: Makefile.am  Makefile.in  dstest.cpp
ModifyODESrc/drawstuff/src/: Makefile.am  Makefile.in  drawstuff.cpp  drawstuffWrapper.cpp  internal.h  resource.h  resources.rc  windows.cpp
ModifyODESrc/include/drawstuff/: Makefile.am  Makefile.in  drawstuff.h  drawstuffWrapper.h  version.h
ModifyODESrc/include/ode/: collision.h  collision_space.h  collision_trimesh.h  common.h  dampedstepcommon.h  extutils.h  matrix.h  misc.h  objects.h  ode.h  odeconfig.h  odemath.h  rotation.h
ModifyODESrc/libccd/src/: Makefile.am  Makefile.in  alloc.c  ccd.c  config.h.in  mpr.c  polytope.c  support.c  vec3.c
ModifyODESrc/libccd/src/ccd/: alloc.h  ccd.h  compiler.h  dbg.h  list.h  polytope.h  precision.h.in  quat.h  simplex.h  support.h  vec3.h
ModifyODESrc/libccd/src/custom/ccdcustom/: quat.h  vec3.h
ModifyODESrc/libccd/src/testsuites/: Makefile.am  Makefile.in  bench.c  bench2.c  boxbox.c  boxbox.h  boxcyl.c  boxcyl.h  common.c  common.h  cylcyl.c  cylcyl.h  main.c  mpr_boxbox.c  mpr_boxbox.h  mpr_boxcyl.c  mpr_boxcyl.h  mpr_cylcyl.c  mpr_cylcyl.h  polytope.c  polytope.h  spheresphere.c  spheresphere.h  support.c  support.h  vec3.c  vec3.h
ModifyODESrc/libccd/src/testsuites/cu/: Makefile.am  Makefile.in  cu.c  cu.h
ModifyODESrc/src/: collision_cylinder_trimesh.cpp  collision_kernel.cpp  collision_kernel.h  collision_libccd.cpp.backup  collision_libccd.h.backup  collision_sapspace.cpp  collision_space.cpp  collision_space_internal.h  collision_trimesh_box.cpp  collision_trimesh_ccylinder.cpp  collision_trimesh_internal.h  collision_trimesh_opcode.cpp  collision_trimesh_plane.cpp  collision_trimesh_ray.cpp  collision_trimesh_sphere.cpp  collision_trimesh_trimesh_new.cpp  config.h  convex.cpp  dampedstep.cpp  dampedstep.h  dampedstepcommon.cpp  dampedstepwithinfo.cpp  error.cpp  extutils.cpp  lcp.cpp  lcp.h  mass.cpp  mat.cpp  mat.h  matrix.cpp  misc.cpp  objects.h  obstack.cpp  obstack.h  ode.cpp  odeinit.cpp  odetls.h  plane.cpp  quickstep.cpp  quickstep.h  (+8 more)
ModifyODESrc/src/joints/: amotor.cpp  amotor.h  ball.cpp  contact.cpp  contact.h  contact2.cpp  contact2.h  contact3.cpp  contact3.h  contactmaxforce.cpp  contactmaxforce.h  emptyball.cpp  emptyball.h  fixed.cpp  hinge.cpp  hinge.h  joint.cpp  joint.h  joint_internal.h  joints.h
PlayGround/: Panda3dCameraCtrl.py  joystick_playground.py  panda_server_base.py  play_bvh.py  playground_util.py  random_playground.py  track_playground.py
PlayGround/misc/: GroundScene.egg  character.bam  character.gltf
